[package]
name = "clipcat"
version = "0.6.0"
authors = ["Icelk <main@icelk.dev>", "xrelkd 46590321+xrelkd@users.noreply.github.com"]
edition = "2018"

[lib]
name = "clipcat"
path = "src/lib.rs"

[[bin]]
name = "clipcatd"
path = "src/bin/clipcatd/main.rs"
required-features = ["clipcatd"]

[[bin]]
name = "clipcatctl"
path = "src/bin/clipcatctl/main.rs"
required-features = ["clipcatctl"]

[[bin]]
name = "clipcat-menu"
path = "src/bin/clipcat-menu/main.rs"
required-features = ["clipcat-menu"]

[[bin]]
name = "clipcat-notify"
path = "src/bin/clipcat-notify/main.rs"
required-features = ["clipcat-notify"]

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

snafu = "0.7"

tonic = "0.8"
prost = "0.11"
http = "0.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
tracing-journald = { version = "0.3", optional = true }
tracing-futures = { version = "0.2", optional = true }

structopt = { version = "0.3", optional = true }
directories = { version = "4", optional = true }
toml = { version = "0.5", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }

x11-clipboard = { git = "https://github.com/wrvsrx/x11-clipboard", rev = "357e7c7fbb2fc9fd6a8b46ed6ce191f8182a594d", optional = true }
wl-clipboard-rs = { version = "0.7", optional = true }

bincode = { version = "1", optional = true }

libc = { version = "0.2", optional = true }
daemonize = { version = "0.4", optional = true }

skim = { version = "0.10", optional = true }

[features]
all-bins = ["clipcatd", "clipcatctl", "clipcat-menu", "clipcat-notify"]
all-backends = ["x11", "wayland"]
full = ["all-bins", "all-backends"]
default = ["clipcatd", "clipcatctl", "clipcat-menu", "all-backends"]

app = ["directories", "structopt", "toml", "tracing-subscriber", "tracing-futures"]
daemon = [
  "daemonize", "libc",
  "tracing-subscriber", "tracing-journald",
  "tokio/signal", "serde_json",
  "bincode"
]
external_editor = ["tokio/process"]
builtin_finder = ["skim"]

x11 = ["x11-clipboard"]
wayland = ["wl-clipboard-rs"]

clipcatd = ["app", "daemon"]
clipcatctl = ["app", "tokio/process", "tokio/io-std", "tokio/fs", "external_editor"]
clipcat-menu = ["app", "tokio/process", "external_editor", "builtin_finder"]
clipcat-notify = ["structopt"]

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }

[profile.release]
opt-level = 3
lto = true
