[workspace.package]
version      = "0.21.1"
authors      = ["xrelkd <46590321+xrelkd@users.noreply.github.com>"]
homepage     = "https://github.com/xrelkd/clipcat"
repository   = "https://github.com/xrelkd/clipcat"
readme       = "README.md"
license      = "GPL-3.0-only"
edition      = "2021"
rust-version = "1.77"
description  = "Clipboard manager written in Rust Programming Language."
categories   = ["clipboard manager"]
keywords     = ["clipboard"]

[workspace]
resolver = "2"
members = [
  "clipcat-menu",
  "clipcat-notify",
  "clipcatctl",
  "clipcatd",

  "crates/base",
  "crates/cli",
  "crates/client",
  "crates/clipboard",
  "crates/dbus-variant",
  "crates/external-editor",
  "crates/metrics",
  "crates/proto",
  "crates/server",
]

[workspace.dependencies]
tracing            = "0.1"
tracing-journald   = "0.3"
tracing-subscriber = "0.3"

bincode    = "1"
http-serde = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
toml       = "0.8"

async-trait = "0.1"
futures = "0.3"
sigfinn = "0.2"
tokio = { version = "1", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
  "process",
] }
tokio-stream = { version = "0.1", features = ["net"] }

arboard = { version = "3", default-features = false, features = [
  "image-data",
  "wayland-data-control",
] }

axum       = "0.8"
tower      = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["trace"] }
hyper-util = "0.1"

prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["gzip"] }
tonic-build = { version = "0.12", default-features = false, features = [
  "prost",
  "transport",
] }

zbus     = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"

bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
daemonize = "0.5"
directories = "6"
exitcode = "1"
hex = "0.4"
http = "1"
humansize = "2"
image = "0.25"
libc = "0.2"
linicon = "2"
mime = "0.3"
mio = { version = "1.1", features = ["os-ext"] }
notify = "6"
notify-rust = "4"
once_cell = "1"
parking_lot = "0.12"
prometheus = "0.14"
regex = "1"
resolve-path = "0.1"
semver = "1"
sha2 = "0.10"
shadow-rs = "0.29"
simdutf8 = "0.1"
skim = "0.15"
snafu = "0.8"
time = { version = "0.3", features = [
  "formatting",
  "local-offset",
  "macros",
  "parsing",
  "serde",
] }

clipcat-base            = { path = "./crates/base" }
clipcat-cli             = { path = "./crates/cli" }
clipcat-client          = { path = "./crates/client" }
clipcat-clipboard       = { path = "./crates/clipboard" }
clipcat-dbus-variant    = { path = "./crates/dbus-variant" }
clipcat-external-editor = { path = "./crates/external-editor" }
clipcat-metrics         = { path = "./crates/metrics" }
clipcat-proto           = { path = "./crates/proto" }
clipcat-server          = { path = "./crates/server" }

[workspace.lints.rust]
async_fn_in_trait = "allow"

# TODO: deny `unused_crate_dependencies` after https://github.com/rust-lang/rust/issues/95513 being solved
unused_crate_dependencies = "allow"

unstable_features = "warn"

absolute_paths_not_starting_with_crate  = "deny"
deprecated_in_future                    = "deny"
elided_lifetimes_in_paths               = "deny"
explicit_outlives_requirements          = "deny"
ffi_unwind_calls                        = "deny"
keyword_idents                          = { level = "deny", priority = -1 }
let_underscore_drop                     = "deny"
macro_use_extern_crate                  = "deny"
meta_variable_misuse                    = "deny"
missing_abi                             = "deny"
non_ascii_idents                        = "deny"
rust_2021_incompatible_closure_captures = "deny"
rust_2021_incompatible_or_patterns      = "deny"
rust_2021_prefixes_incompatible_syntax  = "deny"
rust_2021_prelude_collisions            = "deny"
single_use_lifetimes                    = "deny"
trivial_casts                           = "deny"
trivial_numeric_casts                   = "deny"
unsafe_code                             = "deny"
unsafe_op_in_unsafe_fn                  = "deny"
unused_extern_crates                    = "deny"
unused_import_braces                    = "deny"
unused_lifetimes                        = "deny"
unused_macro_rules                      = "deny"
unused_qualifications                   = "deny"
unused_results                          = "deny"
variant_size_differences                = "deny"

ambiguous_glob_imports                   = "deny"
ambiguous_glob_reexports                 = "deny"
anonymous_parameters                     = "deny"
array_into_iter                          = "deny"
asm_sub_register                         = "deny"
bad_asm_style                            = "deny"
bare_trait_objects                       = "deny"
break_with_label_and_loop                = "deny"
clashing_extern_declarations             = "deny"
coherence_leak_check                     = "deny"
confusable_idents                        = "deny"
const_evaluatable_unchecked              = "deny"
const_item_mutation                      = "deny"
dangling_pointers_from_temporaries       = "deny"
dead_code                                = "deny"
deprecated                               = "deny"
deprecated_where_clause_location         = "deny"
deref_into_dyn_supertrait                = "deny"
deref_nullptr                            = "deny"
drop_bounds                              = "deny"
dropping_copy_types                      = "deny"
dropping_references                      = "deny"
duplicate_macro_attributes               = "deny"
dyn_drop                                 = "deny"
elided_lifetimes_in_associated_constant  = "deny"
ellipsis_inclusive_range_patterns        = "deny"
exported_private_dependencies            = "deny"
for_loops_over_fallibles                 = "deny"
forbidden_lint_groups                    = "deny"
forgetting_copy_types                    = "deny"
forgetting_references                    = "deny"
function_item_references                 = "deny"
hidden_glob_reexports                    = "deny"
improper_ctypes                          = "deny"
improper_ctypes_definitions              = "deny"
incomplete_features                      = "deny"
inline_no_sanitize                       = "deny"
internal_features                        = "deny"
invalid_doc_attributes                   = "deny"
invalid_from_utf8                        = "deny"
invalid_macro_export_arguments           = "deny"
invalid_nan_comparisons                  = "deny"
invalid_value                            = "deny"
irrefutable_let_patterns                 = "deny"
large_assignments                        = "deny"
late_bound_lifetime_arguments            = "deny"
legacy_derive_helpers                    = "deny"
map_unit_fn                              = "deny"
mixed_script_confusables                 = "deny"
named_arguments_used_positionally        = "deny"
no_mangle_generic_items                  = "deny"
non_camel_case_types                     = "deny"
non_fmt_panics                           = "deny"
non_shorthand_field_patterns             = "deny"
non_snake_case                           = "deny"
non_upper_case_globals                   = "deny"
noop_method_call                         = "deny"
opaque_hidden_inferred_bound             = "deny"
overlapping_range_endpoints              = "deny"
path_statements                          = "deny"
private_bounds                           = "deny"
private_interfaces                       = "deny"
redundant_semicolons                     = "deny"
refining_impl_trait                      = { level = "deny", priority = -1 }
renamed_and_removed_lints                = "deny"
repr_transparent_external_private_fields = "deny"
semicolon_in_expressions_from_macros     = "deny"
special_module_name                      = "deny"
stable_features                          = "deny"
suspicious_double_ref_op                 = "deny"
trivial_bounds                           = "deny"
type_alias_bounds                        = "deny"
tyvar_behind_raw_pointer                 = "deny"
uncommon_codepoints                      = "deny"
unconditional_recursion                  = "deny"
unexpected_cfgs                          = "deny"
ungated_async_fn_track_caller            = "deny"
uninhabited_static                       = "deny"
unknown_lints                            = "deny"
unnameable_test_items                    = "deny"
unreachable_code                         = "deny"
unreachable_patterns                     = "deny"
unstable_name_collisions                 = "deny"
unstable_syntax_pre_expansion            = "deny"
unused_allocation                        = "deny"
unused_assignments                       = "deny"
unused_associated_type_bounds            = "deny"
unused_attributes                        = "deny"
unused_braces                            = "deny"
unused_comparisons                       = "deny"
unused_doc_comments                      = "deny"
unused_features                          = "deny"
unused_imports                           = "deny"
unused_labels                            = "deny"
unused_macros                            = "deny"
unused_must_use                          = "deny"
unused_mut                               = "deny"
unused_parens                            = "deny"
unused_unsafe                            = "deny"
unused_variables                         = "deny"
useless_ptr_null_checks                  = "deny"
while_true                               = "deny"

[workspace.lints.clippy]
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }

all      = "deny"
cargo    = "deny"
nursery  = "deny"
pedantic = "deny"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0
