[package]
name                   = "clipcat-menu"
description            = "Clipcat Menu"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
tracing            = { workspace = true }
tracing-journald   = { workspace = true }
tracing-subscriber = { workspace = true }

http-serde = { workspace = true }
serde      = { workspace = true }
toml       = { workspace = true }

tokio = { workspace = true }

clap          = { workspace = true }
clap_complete = { workspace = true }
http          = { workspace = true }
resolve-path  = { workspace = true }
shadow-rs     = { workspace = true }
skim          = { workspace = true }
snafu         = { workspace = true }

clipcat-base            = { workspace = true }
clipcat-cli             = { workspace = true }
clipcat-client          = { workspace = true }
clipcat-external-editor = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }

[lints]
workspace = true
