[package]
name                   = "clipcat-notify"
description            = "Clipcat Notification tool"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

clap          = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
mime          = "0.3"
shadow-rs     = "0.29"
snafu         = "0.8"
time          = { version = "0.3", features = ["local-offset", "serde"] }

clipcat-base   = { path = "../crates/base" }
clipcat-server = { path = "../crates/server" }

[build-dependencies]
shadow-rs = "0.29"

[lints]
workspace = true
