[package]
name                   = "clipcat-notify"
description            = "Clipcat Notification tool"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }

clap          = { workspace = true }
clap_complete = { workspace = true }
mime          = { workspace = true }
shadow-rs     = { workspace = true }
snafu         = { workspace = true }
time          = { workspace = true }

clipcat-base   = { workspace = true }
clipcat-server = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }

[lints]
workspace = true
