[package]
name                 = "clipcatctl"
description          = "Clipcat command line interface"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing            = "0.1"
tracing-journald   = "0.3"
tracing-subscriber = "0.3"

http-serde = "2"
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"

tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

bytes         = "1"
clap          = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
directories   = "5"
http          = "1"
mime          = "0.3"
simdutf8      = "0.1"
snafu         = "0.8"

clipcat-base            = { path = "../crates/base" }
clipcat-cli             = { path = "../crates/cli" }
clipcat-client          = { path = "../crates/client" }
clipcat-external-editor = { path = "../crates/external-editor" }

[lints]
workspace = true
