[package]
name                   = "clipcatd"
description            = "Clipcat Daemon"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
tracing            = "0.1"
tracing-journald   = "0.3"
tracing-subscriber = "0.3"

tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

serde = { version = "1", features = ["derive"] }
toml  = "0.8"

clap          = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
daemonize     = "0.5"
directories   = "5"
exitcode      = "1"
libc          = "0.2"
linicon       = "2"
mime          = "0.3"
resolve-path  = "0.1"
shadow-rs     = "0.27"
simdutf8      = "0.1"
snafu         = "0.8"
time          = { version = "0.3", features = ["formatting", "macros"] }

clipcat-base   = { path = "../crates/base" }
clipcat-cli    = { path = "../crates/cli" }
clipcat-server = { path = "../crates/server" }

[build-dependencies]
shadow-rs = "0.27"

[lints]
workspace = true
