[package]
name                   = "clipcatd"
description            = "Clipcat Daemon"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
tracing            = { workspace = true }
tracing-journald   = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { workspace = true }

serde = { workspace = true }
toml  = { workspace = true }

clap          = { workspace = true }
clap_complete = { workspace = true }
daemonize     = { workspace = true }
directories   = { workspace = true }
exitcode      = { workspace = true }
libc          = { workspace = true }
linicon       = { workspace = true }
mime          = { workspace = true }
resolve-path  = { workspace = true }
shadow-rs     = { workspace = true }
simdutf8      = { workspace = true }
snafu         = { workspace = true }
time          = { workspace = true }

clipcat-base   = { workspace = true }
clipcat-cli    = { workspace = true }
clipcat-server = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }

[lints]
workspace = true
