[package]
name                 = "clipcat-base"
description          = "Clipcat"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
serde = { version = "1", features = ["derive"] }

http = "1"

bytes       = "1"
directories = "5"
humansize   = "2"
image       = "0.24"
lazy_static = "1"
mime        = "0.3"
regex       = "1"
semver      = "1"
sha2        = "0.10"
snafu       = "0.7"
time        = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[lints]
workspace = true
