[package]
name                   = "clipcat-base"
description            = "Clipcat"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
serde = { workspace = true }

tokio = { workspace = true }

http = { workspace = true }

bytes       = { workspace = true }
directories = { workspace = true }
humansize   = { workspace = true }
image       = { workspace = true }
mime        = { workspace = true }
once_cell   = { workspace = true }
regex       = { workspace = true }
semver      = { workspace = true }
sha2        = { workspace = true }
snafu       = { workspace = true }
time        = { workspace = true }

[lints]
workspace = true
