[package]
name                   = "clipcat-cli"
description            = "Clipcat CLI common library"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
serde      = { workspace = true }
serde_with = { workspace = true }

tracing            = { workspace = true }
tracing-journald   = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
