[package]
name                 = "clipcat-client"
description          = "Clipcat client"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing = "0.1"

async-trait = "0.1"
tokio       = { version = "1", features = ["net"] }

http  = "1"
tower = "0.4"

tonic       = { version = "0.10", features = ["gzip"] }
prost-types = "0.12"

snafu = "0.7"
mime  = "0.3"

clipcat-base  = { path = "../base" }
clipcat-proto = { path = "../proto" }

[lints]
workspace = true
