[package]
name                   = "clipcat-client"
description            = "Clipcat client"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
tracing = "0.1"

async-trait = "0.1"
hyper-util  = "0.1"
tokio       = { version = "1", features = ["net"] }

http  = "1"
tower = "0.4"

prost-types = "0.13"
tonic       = { version = "0.12", features = ["gzip"] }

mime   = "0.3"
semver = "1"
snafu  = "0.8"

clipcat-base  = { path = "../base" }
clipcat-proto = { path = "../proto" }

[lints]
workspace = true
