[package]
name                   = "clipcat-client"
description            = "Clipcat client"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
tracing = { workspace = true }

async-trait = { workspace = true }
hyper-util  = { workspace = true }
tokio       = { workspace = true }

http  = { workspace = true }
tower = { workspace = true }

prost-types = { workspace = true }
tonic       = { workspace = true }

mime   = { workspace = true }
semver = { workspace = true }
snafu  = { workspace = true }

clipcat-base  = { workspace = true }
clipcat-proto = { workspace = true }

[lints]
workspace = true
