[package]
name                 = "clipcat-clipboard"
description          = "Clipcat clipboard"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

autoexamples = false

[dependencies]
tracing = "0.1"

arboard = "3"

bytes = "1"
mio   = { version = "0.8", features = ["os-ext"] }
snafu = "0.7"

clipcat = { path = "../core/" }

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
x11rb           = { version = "0.12", features = ["xfixes"] }
wl-clipboard-rs = "0.8"

[dev-dependencies]
tracing-subscriber = "0.3"

tokio = { version = "1", features = ["rt", "signal", "sync"] }

sigfinn = "0.1"

[[example]]
name = "load"
path = "examples/load.rs"

[[example]]
name = "load-wait"
path = "examples/load_wait.rs"

[[example]]
name = "store"
path = "examples/store.rs"

[lints]
workspace = true
