[package]
name                   = "clipcat-clipboard"
description            = "Clipcat clipboard"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

autoexamples = false

[dependencies]
tracing = "0.1"

arboard = { version = "3", default-features = false, features = [
  "image-data",
  "wayland-data-control",
] }

bytes       = "1"
mime        = "0.3"
mio         = { version = "0.8", features = ["os-ext"] }
parking_lot = "0.12"
snafu       = "0.8"

clipcat-base = { path = "../base/" }

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
x11rb           = { version = "0.13", features = ["xfixes"] }
wl-clipboard-rs = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc            = "0.2"
objc_id         = "0.1"
objc-foundation = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"

tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
] }

sigfinn = "0.2"

[[example]]
name = "load"
path = "examples/load.rs"

[[example]]
name = "load-wait"
path = "examples/load_wait.rs"

[[example]]
name = "store"
path = "examples/store.rs"

[lints]
workspace = true
