[package]
name                 = "clipcat"
description          = "Clipcat"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
caracal = { git = "https://github.com/xrelkd/caracal.git", tag = "v0.1.0" }

serde = { version = "1", features = ["derive"] }

chrono      = "0.4"
directories = "5"
lazy_static = "1"
mime        = "0.3"
snafu       = "0.6"

[lints]
workspace = true
