[package]
name                 = "clipcat"
description          = "Clipcat"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_with = "3"

bytes       = "1"
chrono      = "0.4"
directories = "5"
image       = "0.24"
lazy_static = "1"
mime        = "0.3"
snafu       = "0.7"

[lints]
workspace = true
